src/CAPI/CAPI_Storages.pas

unit CAPI_Storages;

interface

uses
    CAPI_Utils,
    CAPI_Types;

procedure Storages_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
function Storages_Get_Count(): Integer; CDECL;
function Storages_Get_First(): Integer; CDECL;
function Storages_Get_Name(): PAnsiChar; CDECL;
function Storages_Get_Next(): Integer; CDECL;
function Storages_Get_idx(): Integer; CDECL;
procedure Storages_Set_idx(Value: Integer); CDECL;
procedure Storages_Set_Name(const Value: PAnsiChar); CDECL;
procedure Storages_Get_RegisterNames(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
procedure Storages_Get_RegisterValues(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
procedure Storages_Get_RegisterValues_GR(); CDECL;
function Storages_Get_puSOC(): Double; CDECL;
procedure Storages_Set_puSOC(Value: Double); CDECL;
function Storages_Get_State(): Integer; CDECL;
procedure Storages_Set_State(Value: Integer); CDECL;

function Storages_Get_AmpLimit(): Double; CDECL;
function Storages_Get_AmpLimitGain(): Double; CDECL;
function Storages_Get_ChargeTrigger(): Double; CDECL;
function Storages_Get_ControlMode(): Integer; CDECL;
function Storages_Get_DischargeTrigger(): Double; CDECL;
function Storages_Get_EffCharge(): Double; CDECL;
function Storages_Get_EffDischarge(): Double; CDECL;
function Storages_Get_Kp(): Double; CDECL;
function Storages_Get_kV(): Double; CDECL;
function Storages_Get_kVA(): Double; CDECL;
function Storages_Get_kvar(): Double; CDECL;
function Storages_Get_kVDC(): Double; CDECL;
function Storages_Get_kW(): Double; CDECL;
function Storages_Get_kWhRated(): Double; CDECL;
function Storages_Get_kWRated(): Double; CDECL;
function Storages_Get_LimitCurrent(): TAPIBoolean; CDECL;
function Storages_Get_PF(): Double; CDECL;
function Storages_Get_PITol(): Double; CDECL;
function Storages_Get_SafeMode(): Integer; CDECL;
function Storages_Get_SafeVoltage(): Double; CDECL;
function Storages_Get_TimeChargeTrig(): Double; CDECL;
function Storages_Get_VarFollowInverter(): Integer; CDECL;
procedure Storages_Set_AmpLimit(Value: Double); CDECL;
procedure Storages_Set_AmpLimitGain(Value: Double); CDECL;
procedure Storages_Set_ChargeTrigger(Value: Double); CDECL;
procedure Storages_Set_ControlMode(Value: Integer); CDECL;
procedure Storages_Set_DischargeTrigger(Value: Double); CDECL;
procedure Storages_Set_EffCharge(Value: Double); CDECL;
procedure Storages_Set_EffDischarge(Value: Double); CDECL;
procedure Storages_Set_Kp(Value: Double); CDECL;
procedure Storages_Set_kV(Value: Double); CDECL;
procedure Storages_Set_kVA(Value: Double); CDECL;
procedure Storages_Set_kvar(Value: Double); CDECL;
procedure Storages_Set_kVDC(Value: Double); CDECL;
procedure Storages_Set_kW(Value: Double); CDECL;
procedure Storages_Set_kWhRated(Value: Double); CDECL;
procedure Storages_Set_kWRated(Value: Double); CDECL;
procedure Storages_Set_LimitCurrent(Value: TAPIBoolean); CDECL;
procedure Storages_Set_PF(Value: Double); CDECL;
procedure Storages_Set_PITol(Value: Double); CDECL;
procedure Storages_Set_SafeVoltage(Value: Double); CDECL;
procedure Storages_Set_TimeChargeTrig(Value: Double); CDECL;
procedure Storages_Set_VarFollowInverter(Value: Integer); CDECL;

function Storages_Get_Pointer(): Pointer; CDECL;

implementation

uses
    CAPI_Constants,
    Executive,
    Sysutils,
    Storage,
    DSSPointerlist,
    DSSGlobals,
    DSSClass,
    DSSObjectHelper,
    DSSHelper;


//------------------------------------------------------------------------------
function _activeObj(DSS: TDSSContext; out obj: TStorageObj): Boolean; inline;
begin
    Result := False;
    obj := NIL;
    if InvalidCircuit(DSS) then
        Exit;
    
    obj := DSS.ActiveCircuit.StorageElements.Active;
    if obj = NIL then
    begin
        if DSS_CAPI_EXT_ERRORS then
        begin
            DoSimpleMsg(DSS, 'No active %s object found! Activate one and retry.', ['Storage'], 18989);
        end;
        Exit;
    end;
    
    Result := True;
end;
//------------------------------------------------------------------------------
procedure Storages_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
begin
    if InvalidCircuit(DSSPrime) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;
    Generic_Get_AllNames(ResultPtr, ResultCount, DSSPrime.ActiveCircuit.StorageElements, False);
end;
//------------------------------------------------------------------------------
function Storages_Get_Count(): Integer; CDECL;
begin
    Result := 0;
    if InvalidCircuit(DSSPrime) then
        Exit;
    Result := DSSPrime.ActiveCircuit.StorageElements.Count;
end;
//------------------------------------------------------------------------------
function Storages_Get_First(): Integer; CDECL;
begin
    Result := 0;
    if InvalidCircuit(DSSPrime) then
        Exit;
    Result := Generic_CktElement_Get_First(DSSPrime, DSSPrime.ActiveCircuit.StorageElements);
end;
//------------------------------------------------------------------------------
function Storages_Get_Next(): Integer; CDECL;
begin
    Result := 0;
    if InvalidCircuit(DSSPrime) then
        Exit;
    Result := Generic_CktElement_Get_Next(DSSPrime, DSSPrime.ActiveCircuit.StorageElements);
end;
//------------------------------------------------------------------------------
function Storages_Get_Name(): PAnsiChar; CDECL;
var
    elem: TStorageObj;
begin
    Result := NIL;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := DSS_GetAsPAnsiChar(DSSPrime, elem.Name());
end;
//------------------------------------------------------------------------------
procedure Storages_Set_Name(const Value: PAnsiChar); CDECL;
// Set element active by name
begin
    if InvalidCircuit(DSSPrime) then
        Exit;
    if DSSPrime.StorageClass.SetActive(Value) then
    begin
        DSSPrime.ActiveCircuit.SetActiveCktElement(DSSPrime.StorageClass.ElementList.Active);
        DSSPrime.ActiveCircuit.StorageElements.Get(DSSPrime.StorageClass.ActiveIndex());
    end
    else
    begin
        DoSimpleMsg(DSSPrime, 'Storage "%s" not found in Active Circuit.', [Value], 77003);
    end;
end;
//------------------------------------------------------------------------------
function Storages_Get_idx(): Integer; CDECL;
begin
    Result := 0;
    if InvalidCircuit(DSSPrime) then
        Exit;
    Result := DSSPrime.ActiveCircuit.StorageElements.ActiveIndex
end;
//------------------------------------------------------------------------------
procedure Storages_Set_idx(Value: Integer); CDECL;
var
    pStorage: TStorageObj;
begin
    if InvalidCircuit(DSSPrime) then
        Exit;
    pStorage := DSSPrime.ActiveCircuit.StorageElements.Get(Value);
    if pStorage = NIL then
    begin
        DoSimpleMsg(DSSPrime, 'Invalid %s index: "%d".', ['Storage', Value], 656565);
        Exit;
    end;
    DSSPrime.ActiveCircuit.SetActiveCktElement(pStorage);
end;
//------------------------------------------------------------------------------
procedure Storages_Get_RegisterNames(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
var
    Result: PPAnsiCharArray0;
    k: Integer;
begin
    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, NumStorageRegisters);
    for k := 0 to NumStorageRegisters - 1 do
    begin
        Result[k] := DSS_CopyStringAsPChar(DSSPrime.StorageClass.RegisterNames[k]);
    end;
end;
//------------------------------------------------------------------------------
procedure Storages_Get_RegisterValues(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
var
    Result: PDoubleArray0;
    elem: TStorageObj;
    k: Integer;
begin
    if not _activeObj(DSSPrime, elem) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;

    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, NumStorageRegisters);
    for k := 0 to NumStorageRegisters - 1 do
    begin
        Result[k] := elem.Registers[k + 1];
    end;
end;

procedure Storages_Get_RegisterValues_GR(); CDECL;
// Same as Storages_Get_RegisterValues but uses global result (GR) pointers
begin
    Storages_Get_RegisterValues(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;
//------------------------------------------------------------------------------
function Storages_Get_puSOC(): Double; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.Storagevars.kWhStored / elem.StorageVars.kWhRating;
end;
//------------------------------------------------------------------------------
procedure Storages_Set_puSOC(Value: Double); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetDouble(ord(TStorageProp.kWhstored), elem.StorageVars.kWhRating * Value, []);
        Exit;
    end;
    elem.Storagevars.kWhStored := elem.StorageVars.kWhRating * Value;
end;
//------------------------------------------------------------------------------
function Storages_Get_State(): Integer; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.StorageState();
end;
//------------------------------------------------------------------------------
procedure Storages_Set_State(Value: Integer); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
